# infini_converter

./: .gitignore  README.md  create_logo.py  main.py  pyproject.toml
config/: config.json  config_sed.json  config_xld.json
docs/: USER_GUIDE.md
src/infini_converter/: __init__.py  config.py  file_discovery.py  gui.py  logger.py  processor.py
tests/: TEST_REPORT.md  __init__.py  debug_directory_values.py  debug_gui_flow.py  debug_output_files.py  test_complete_solution.py  test_complete_workflow.py  test_complete_workflow_fixed.py  test_directory_defaults.py  test_directory_display.py  test_directory_display_simple.py  test_directory_simple.py  test_failed_process_output.py  test_fixed_command.py  test_functions.py  test_gui_fix.py  test_gui_integration.py  test_gui_logic.py  test_infini_converter.py  test_load_defaults.py  test_load_saved.py  test_null_config.py  test_output_display.py  test_output_exists_false.py  test_output_files.py  test_output_fix.py  test_processor_behavior.py  test_progress_bar.py  test_realistic_gui.py  test_realtime_progress.py  test_save_functionality.py  test_subprocess.py  test_subprocess_progress.py  test_tooltip.py  test_updated_logic.py  test_warning_dialog.py  verify_defaults.py  verify_warning_dialog.py
